package ma.farm.view;

public class EggsBayView {
}
