package ma.farm.view;

public class LoginView {
}
