package ma.farm.view;

public class PersonnelView {
}
