package ma.farm.view;

public class StorageView {
}
