@startuml Diagram_4_View_Layer

title Diagram 4: View Layer (Views + App)

' ========================================
' VIEW CLASSES (JavaFX Views - Optional)
' ========================================

class LoginView {
  --
  + {static} show(stage: Stage): void
}

class DashboardView {
  --
  + {static} show(stage: Stage): void
}

class ChickenBayView {
  --
  + {static} show(stage: Stage): void
}

class EggsBayView {
  --
  + {static} show(stage: Stage): void
}

class StorageView {
  --
  + {static} show(stage: Stage): void
}

class TasksView {
  --
  + {static} show(stage: Stage): void
}

class PersonnelView {
  --
  + {static} show(stage: Stage): void
}

' ========================================
' MAIN APPLICATION CLASS
' ========================================

class App {
  - primaryStage: Stage
  --
  + start(stage: Stage): void
  + {static} main(args: String[]): void
}

' ========================================
' APP TO VIEW RELATIONSHIPS
' ========================================

App ..> LoginView : starts_with
App ..> DashboardView : can_navigate_to
App ..> ChickenBayView : can_navigate_to
App ..> EggsBayView : can_navigate_to
App ..> StorageView : can_navigate_to
App ..> TasksView : can_navigate_to
App ..> PersonnelView : can_navigate_to

note top of LoginView
  <b>View classes are optional</b>
  Can load FXML directly in controllers
  
  Included for complete architecture
end note

note right of App
  <b>Main Application Entry Point</b>
  
  • Extends javafx.application.Application
  • Sets up primary stage
  • Loads initial LoginView
  • Configures window properties
end note

note bottom of DashboardView
  <b>All views follow same pattern:</b>
  1. Load FXML file
  2. Set controller
  3. Apply CSS styles
  4. Show on stage
end note

@enduml